tests/unit-fail-compilation/enum-lvalue.ref
enum-lvalue.c:6:3: error: Unary '&' operator applied to non-lvalue.
  Constraint violation (CV-CER1). See C11 sec. 6.5.3.2:1
Translation failed (config dumped). Run kcc -d enum-lvalue.c to see commands run.
