tests/unit-fail-compilation/enum-lvalue.c
enum {
  FOO
};

int main() {
  int *x = &FOO;
  return 0;
}
